[gd_scene load_steps=13 format=3 uid="uid://dp26i51kj0tvp"]

[ext_resource type="FontFile" uid="uid://dc4mm784qpajc" path="res://gui/font/Oswald-Bold.ttf" id="1"]
[ext_resource type="Shader" path="res://shaders/gaussian-blur.gdshader" id="1_0jd2d"]
[ext_resource type="Script" path="res://main.gd" id="1_bcocx"]
[ext_resource type="Material" uid="uid://c8e7ck31g8wbs" path="res://post-process/pp_dither-band.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://dcy86n4si7d7v" path="res://world/world.tscn" id="4"]
[ext_resource type="FontFile" uid="uid://clvfdpwuiqgui" path="res://fonts/RoSpritendoSemiboldBeta-vmVwZ.otf" id="5_1ut6q"]
[ext_resource type="Script" path="res://player/PauseMenu.gd" id="5_uujxg"]
[ext_resource type="StyleBox" uid="uid://dw26a84r1w6ut" path="res://world/pause-button-focus.tres" id="7_c52r2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mhjag"]
shader = ExtResource("1_0jd2d")
shader_parameter/h = 0.2
shader_parameter/v = 0.0
shader_parameter/enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8ke5"]
bg_color = Color(0.494118, 0.270588, 0.529412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontVariation" id="FontVariation_j0k5a"]
base_font = ExtResource("1")
spacing_glyph = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c212v"]
bg_color = Color(0.180392, 0.188235, 0.388235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.711381, 0.443147, 0.134274, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 4
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="Main" type="Node"]
script = ExtResource("1_bcocx")

[node name="N64Layer" type="CanvasLayer" parent="."]
layer = 0

[node name="HBlur" type="SubViewportContainer" parent="N64Layer"]
texture_filter = 1
material = SubResource("ShaderMaterial_mhjag")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="N64Layer/HBlur"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="DitherBand" type="SubViewportContainer" parent="N64Layer/HBlur/SubViewport"]
material = ExtResource("2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="N64Layer/HBlur/SubViewport/DitherBand"]
handle_input_locally = false
msaa_3d = 1
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="World" parent="N64Layer/HBlur/SubViewport/DitherBand/SubViewport" instance=ExtResource("4")]

[node name="Panel" type="Panel" parent="N64Layer/HBlur/SubViewport/DitherBand/SubViewport"]
visible = false
anchors_preset = -1
anchor_left = 0.803
anchor_top = 0.839
anchor_right = 0.86
anchor_bottom = 0.892
offset_right = 40.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f8ke5")

[node name="Label" type="Label" parent="N64Layer/HBlur/SubViewport/DitherBand/SubViewport/Panel"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_j0k5a")
text = "TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="N64Layer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 932.0
offset_bottom = 657.0
script = ExtResource("5_uujxg")

[node name="ColorRect" type="ColorRect" parent="N64Layer/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 43.0
offset_right = 899.0
offset_bottom = 553.0
color = Color(0.372549, 0.372549, 0.372549, 1)

[node name="Resume" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 80.0
offset_top = 177.0
offset_right = 194.0
offset_bottom = 208.0
focus_neighbor_left = NodePath("../DoubleBlaster")
focus_neighbor_top = NodePath("../EndRun")
focus_neighbor_right = NodePath("../ShieldUpgrade")
focus_neighbor_bottom = NodePath("../SpellSpeed")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "Resume"

[node name="ShieldUpgrade" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 300.0
offset_top = 175.0
offset_right = 507.0
offset_bottom = 206.0
focus_neighbor_left = NodePath("../Resume")
focus_neighbor_top = NodePath("../SpellStrength")
focus_neighbor_right = NodePath("../DoubleBlaster")
focus_neighbor_bottom = NodePath("../SpellStrength")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "Shield Upgrade"

[node name="ShieldLabel" type="Label" parent="N64Layer/Control/ShieldUpgrade"]
layout_mode = 0
offset_left = -6.0
offset_top = -89.0
offset_right = 265.0
offset_bottom = -37.0
text = "Reflect projectiles with your shield.
Cost: 2000 EXP"

[node name="ShieldLabel2" type="Label" parent="N64Layer/Control/ShieldUpgrade"]
layout_mode = 0
offset_left = -6.0
offset_top = -35.0
offset_right = 265.0
offset_bottom = 17.0
text = "Reflective:"

[node name="DoubleBlaster" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 603.0
offset_top = 173.0
offset_right = 810.0
offset_bottom = 204.0
focus_neighbor_left = NodePath("../ShieldUpgrade")
focus_neighbor_top = NodePath("../RunSpeed")
focus_neighbor_right = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../RunSpeed")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "Double Spells"

[node name="BlasterLabel" type="Label" parent="N64Layer/Control/DoubleBlaster"]
layout_mode = 0
offset_left = -1.0
offset_top = -88.0
offset_right = 270.0
offset_bottom = -36.0
text = "Cast 2 spells at once.
Cost: 8000 EXP"

[node name="BlasterLabel2" type="Label" parent="N64Layer/Control/DoubleBlaster"]
layout_mode = 0
offset_left = 3.0
offset_top = -34.0
offset_right = 274.0
offset_bottom = 18.0
text = "Double spells:"

[node name="SpellSpeed" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 38.0
offset_top = 336.0
offset_right = 245.0
offset_bottom = 367.0
focus_neighbor_left = NodePath("../RunSpeed")
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_right = NodePath("../SpellStrength")
focus_neighbor_bottom = NodePath("../HealthUpgrade")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "Spell Speed"

[node name="SpellSpeedLabel" type="Label" parent="N64Layer/Control/SpellSpeed"]
layout_mode = 0
offset_left = -1.0
offset_top = -89.0
offset_right = 270.0
offset_bottom = -37.0
text = "Cast spells faster.
Cost: 1000 EXP"

[node name="SpellSpeedLabel2" type="Label" parent="N64Layer/Control/SpellSpeed"]
layout_mode = 0
offset_left = -1.0
offset_top = -33.0
offset_right = 270.0
offset_bottom = 19.0
text = "Level:"

[node name="SpellStrength" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 323.0
offset_top = 335.0
offset_right = 530.0
offset_bottom = 366.0
focus_neighbor_left = NodePath("../SpellSpeed")
focus_neighbor_top = NodePath("../ShieldUpgrade")
focus_neighbor_right = NodePath("../RunSpeed")
focus_neighbor_bottom = NodePath("../EndRun")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "Spell Strength"

[node name="SpellDamageLabel" type="Label" parent="N64Layer/Control/SpellStrength"]
layout_mode = 0
offset_left = -6.0
offset_top = -87.0
offset_right = 265.0
offset_bottom = -35.0
text = "Increase spell damage.
Cost: 1000 EXP"

[node name="SpellDamageLabel2" type="Label" parent="N64Layer/Control/SpellStrength"]
layout_mode = 0
offset_left = -5.0
offset_top = -36.0
offset_right = 266.0
offset_bottom = 16.0
text = "Level:"

[node name="RunSpeed" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 617.0
offset_top = 334.0
offset_right = 824.0
offset_bottom = 365.0
focus_neighbor_left = NodePath("../SpellStrength")
focus_neighbor_top = NodePath("../DoubleBlaster")
focus_neighbor_right = NodePath("../SpellSpeed")
focus_neighbor_bottom = NodePath("../DoubleBlaster")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "Run Speed"

[node name="RunSpeedLabel" type="Label" parent="N64Layer/Control/RunSpeed"]
layout_mode = 0
offset_left = -7.0
offset_top = -85.0
offset_right = 264.0
offset_bottom = -33.0
text = "Run faster.
Cost: 1000 EXP"

[node name="RunSpeedLabel2" type="Label" parent="N64Layer/Control/RunSpeed"]
layout_mode = 0
offset_left = -8.0
offset_top = -34.0
offset_right = 263.0
offset_bottom = 18.0
text = "Level:"

[node name="HealthUpgrade" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 33.0
offset_top = 482.0
offset_right = 240.0
offset_bottom = 513.0
focus_neighbor_left = NodePath("../EndRun")
focus_neighbor_top = NodePath("../SpellSpeed")
focus_neighbor_right = NodePath("../EndRun")
focus_neighbor_bottom = NodePath("../Resume")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "More Health"

[node name="HealthUpgradeLabel" type="Label" parent="N64Layer/Control/HealthUpgrade"]
layout_mode = 0
offset_left = 5.0
offset_top = -89.0
offset_right = 276.0
offset_bottom = -37.0
text = "Recharge health.
Cost: 1000 EXP"

[node name="HealthUpgradeLabel2" type="Label" parent="N64Layer/Control/HealthUpgrade"]
layout_mode = 0
offset_left = 4.0
offset_top = -34.0
offset_right = 275.0
offset_bottom = 18.0
text = "Level:"

[node name="EndRun" type="Button" parent="N64Layer/Control"]
process_mode = 3
layout_mode = 2
offset_left = 320.0
offset_top = 481.0
offset_right = 527.0
offset_bottom = 512.0
focus_neighbor_left = NodePath("../HealthUpgrade")
focus_neighbor_top = NodePath("../SpellStrength")
focus_neighbor_right = NodePath("../HealthUpgrade")
focus_neighbor_bottom = NodePath("../ShieldUpgrade")
theme_override_fonts/font = ExtResource("5_1ut6q")
theme_override_styles/normal = SubResource("StyleBoxFlat_c212v")
theme_override_styles/focus = ExtResource("7_c52r2")
text = "End Run"

[node name="HealthLabel" type="Label" parent="N64Layer/Control"]
layout_mode = 0
offset_left = 611.0
offset_top = 425.0
offset_right = 699.0
offset_bottom = 451.0
text = "Health: 100"

[node name="ExpLabel" type="Label" parent="N64Layer/Control"]
layout_mode = 0
offset_left = 612.0
offset_top = 457.0
offset_right = 658.0
offset_bottom = 483.0
text = "Exp: 0"

[node name="KeyLabel" type="Label" parent="N64Layer/Control"]
layout_mode = 0
offset_left = 611.0
offset_top = 488.0
offset_right = 657.0
offset_bottom = 514.0
text = "Have you found the key chest?
Not yet..."

[connection signal="pressed" from="N64Layer/Control/Resume" to="N64Layer/Control" method="_on_resume_pressed"]
[connection signal="pressed" from="N64Layer/Control/ShieldUpgrade" to="N64Layer/Control" method="_on_shield_upgrade_pressed"]
[connection signal="pressed" from="N64Layer/Control/DoubleBlaster" to="N64Layer/Control" method="_on_double_blaster_pressed"]
[connection signal="pressed" from="N64Layer/Control/SpellSpeed" to="N64Layer/Control" method="_on_spell_speed_pressed"]
[connection signal="pressed" from="N64Layer/Control/SpellStrength" to="N64Layer/Control" method="_on_spell_strength_pressed"]
[connection signal="pressed" from="N64Layer/Control/RunSpeed" to="N64Layer/Control" method="_on_run_speed_pressed"]
[connection signal="pressed" from="N64Layer/Control/HealthUpgrade" to="N64Layer/Control" method="_on_health_upgrade_pressed"]
[connection signal="pressed" from="N64Layer/Control/EndRun" to="." method="_on_end_run_pressed"]
[connection signal="pressed" from="N64Layer/Control/EndRun" to="N64Layer/Control" method="_on_end_run_pressed"]
